remove contact.php

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <header>
         <nav>
-            <label class="logo">MJutt</label>
+            <label class="logo">Gill</label>
             <ul id="ulTag">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact-form.php">Contact Us</a></li>
+                <li><a href="#">Contact Us</a></li>
             </ul>
             <span class="icon">
                 <i class="fa fa-bars" id="menuBtn"></i>
