--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
             <span class="icon">
                 <i class="fa fa-bars" id="menuBtn"></i>
